# core-carve

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
core_carve/: base_design.py  camber_design.py  core_blank.py  gcode_generator.py  main.py  materials.py  profile_generator.py  ski_design.py  ski_geometry.py  ski_mechanics.py  ski_mould.py  tab_base.py  tab_blank.py  tab_camber.py  tab_design.py  tab_gcode.py  tab_geometry.py  tab_materials.py  tab_profile.py
data/: Ski_planform.dxf  base.dxf  camber_params.json  core_profile.nc  sidewall_slots.nc  ski.json  ski_params.json  slot_params.json
tests/: TEST_SUMMARY.md  base.dxf  test_tab2_geometry.py
